# clangy

./: README.md  fast.c  jukebox.c  regional.c  sort.c  stdntn.c  temperature.c
async/: Makefile  README.md  async.c  async.h  main.c
dl/: Makefile  README.md  main.c
hacker/: Makefile  README.md  hacker_client.c  hacker_server.c  network.c  network.h
jpegdump/: Makefile  README.md  jpegdump.c  jpegdump.h  main.c
nextbus/: Makefile  README.md  commons.c  commons.h  display.c  display.h  fetch.c  fetch.h  jsmn.c  jsmn.h  json.c  json.h  nextbus.c  time.c  time.h
periodix/: Makefile  README.md  commons.c  commons.h  element.c  element.h  main.c
totp/: CMakeLists.txt  Makefile  README.md  base32.c  base32.h  main.c  totp.c  totp.h
